--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
     "grunt": "1.0.4",
+    "node-cron": "^3.0.2",
     "sails": "^1.5.4",
     "sails-hook-grunt": "^5.0.0",
     "sails-hook-organics": "^2.2.1",
