--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "dotenv": "^16.0.3",
     "grunt": "1.0.4",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
